--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@ethersproject/providers": "^5.4.1",
-    "ethers": "^5.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
@@ -24,6 +23,7 @@
     "@types/react-redux": "^7.1.9",
     "bignumber.js": "^9.0.0",
     "clsx": "^1.1.1",
+    "ethers": "^5.4.1",
     "material-ui-image": "^3.3.2",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
@@ -41,7 +41,7 @@
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
-    "use-wallet": "^0.8.1",
+    "use-wallet": "OGBoogieTomb/use-wallet",
     "web3": "^1.2.11"
   },
   "scripts": {
