rough changes to bomb

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tomb Finance",
-  "name": "Tomb Finance",
+  "short_name": "Bomb Money",
+  "name": "Bomb Money",
   "icons": [
     {
       "src": "favicon.ico",
