--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@pancakeswap/sdk": "^2.4.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@spiritswap/sdk": "https://github.com/Layer3Org/spiritswap-sdk",
     "@spookyswap/sdk": "https://github.com/SpookySwap/spookyswap-sdk",
