--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.9",
     "bignumber.js": "^9.0.0",
     "clsx": "^1.1.1",
@@ -35,6 +36,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
+    "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
