--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "bomb.money",
-  "name": "bomb.money",
+  "short_name": "10mb.finance",
+  "name": "10mb.finance",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon-32x32.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "android-chrome-192x192.png",
